--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Supabase Configuration
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
+JWT_SECRET=your-jwt-secret-key
 
 # OpenAI Configuration
 VITE_OPENAI_API_KEY=your-openai-api-key
