--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
 JWT_SECRET=your-jwt-secret-key
 
+# App Configuration
+VITE_APP_URL=https://your-app-url.com
+
 # OpenAI Configuration
 VITE_OPENAI_API_KEY=your-openai-api-key
 
